Replace about (EN), update welcome name to George Sanaet and header brand to Sanaet

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
         <fa-icon [icon]="faBars" class="bar-icon" (click)="onToggleBar()"></fa-icon>
     </div>
 
-    <div class="child logo-container" itemprop="brand" itemscope itemtype="https://schema.org/Brand">
-        <a (click)="resetMenu()" href="#" class="logo" itemprop="name" itemprop="logo">gbastos</a>
+        <div class="child logo-container" itemprop="brand" itemscope itemtype="https://schema.org/Brand">
+        <a (click)="resetMenu()" href="#" class="logo" itemprop="name" itemprop="logo">Sanaet</a>
     </div>
 
     <div class="child nav-container" #nav [hidden]="!hasMenuToggled" itemscope itemtype="https://schema.org/SiteNavigationElement">
