--- a/src/app/welcome/welcome-dialog/welcome-dialog.component.html
+++ b/src/app/welcome/welcome-dialog/welcome-dialog.component.html
@@ -9,14 +9,14 @@
             [startDelay]="1500"
             [typeSpeed]="200"
             [data]='[
-                {
-                    "language": "pt",
-                    "phrases": [ "Meu nome é Guilherme.", "Seja bem-vindo(a) ao meu resumo online.", "Abaixo, você me conhecerá melhor... :)" ]
-                },
-                {
-                    "language": "en",
-                    "phrases": [ "My name is Guilherme.", "Be welcome to my Live Resume.", "Down below, you will know me better... :)" ]
-                }
-            ]'></span>
+                    {
+                        "language": "pt",
+                        "phrases": [ "Meu nome é George Sanaet.", "Seja bem-vindo(a) ao meu resumo online.", "Abaixo, você me conhecerá melhor... :)" ]
+                    },
+                    {
+                        "language": "en",
+                        "phrases": [ "My name is George Sanaet.", "Welcome to my Live Resume.", "Down below, you will know me better... :)" ]
+                    }
+                ]'></span>
     </div>
 </div>
