--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -90,7 +90,7 @@
             height: 450px;
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: center center;
+            background-position: center top;
             -webkit-border-radius: 99em;
             -moz-border-radius: 99em;
             border-radius: 99em;
