Remove Portuguese (pt) language - make project English-only
- Remove language switcher from header
- Delete pt locale configuration from angular.json
- Remove all Portuguese internationalizations from data files
- Delete Portuguese localization file (messages.pt.xlf)
- Remove Portuguese content from welcome dialog and other components

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -124,7 +124,7 @@
                     height: 110px;
                     background-size: cover;
                     background-repeat: no-repeat;
-                    background-position: center center;
+                    background-position: center top;
                     border-radius: 99em;
                     background-image: url('../../assets/template/about/george-sanaet-sankui.jpeg');
                     border: 1px solid #d4e7fe;
