--- a/src/app/posts/posts-carousel/posts-carousel.component.scss
+++ b/src/app/posts/posts-carousel/posts-carousel.component.scss
@@ -66,6 +66,26 @@
                     font-weight: 600;
                     font-size: 18px;
                     text-align: left;
+
+                    a {
+                        text-decoration: none !important;
+                        color: inherit !important;
+                        transition: all 0.2s ease-in-out;
+
+                        &:hover {
+                            text-decoration: underline !important;
+                        }
+
+                        /* Add external link arrow icon */
+                        &::after {
+                            content: ' ↗';
+                            font-size: 0.8em;
+                            vertical-align: super;
+                            margin-left: 2px;
+                            opacity: 0;
+                            transition: all 0.2s ease-in-out;
+                        }
+                    }
                 }
 
                 p.description {
@@ -97,6 +117,10 @@
 
             &:hover {
                 transform: scale(1.025);
+
+                h2.title a::after {
+                    opacity: 0.8;
+                }
             }
         }
         &.partial {
