--- a/src/app/posts/posts-carousel/posts-carousel.component.html
+++ b/src/app/posts/posts-carousel/posts-carousel.component.html
@@ -14,9 +14,9 @@
                         <meta itemprop="author" content="Guilherme Borges Bastos" />
                         <meta itemprop="creator" content="Guilherme Borges Bastos" />
                         <meta itemprop="publisher" content="Guilherme Borges Bastos" />
-                        <a href="{{ post.http }}" target="_blank" rel="nofollow">
-                            <h2 class="title" appInternationalization [data]="post.internationalizations" property='title' itemprop="name" itemprop="headline">Loading...</h2>
-                        </a>
+                        <h2 class="title" itemprop="name" itemprop="headline">
+                            <a href="{{ post.http }}" target="_blank" rel="nofollow" appInternationalization [data]="post.internationalizations" property='title'>Loading...</a>
+                        </h2>
                         <p class="description" appInternationalization [data]="post.internationalizations" property='description' ellipsis='275' itemprop="description">Loading...</p>
                     </div>
                 </a>
