--- a/src/app/welcome/welcome-background/welcome-background.component.html
+++ b/src/app/welcome/welcome-background/welcome-background.component.html
@@ -1,12 +1,9 @@
 <div class="skills">
     <img loading="lazy" class="background" src="assets/template/welcome/illustration-back.png" alt="Background circle"/>
-    <img loading="lazy" class="skill-icon first" src="assets/template/welcome/icons/docker.svg" alt="Docker"/>
-    <img loading="lazy" class="skill-icon second" src="assets/template/welcome/icons/css3.svg" alt="CSS3"/>
-    <img loading="lazy" class="skill-icon third" src="assets/template/welcome/icons/git.svg" alt="Git"/>
-    <img loading="lazy" class="skill-icon fourth" src="assets/template/welcome/icons/html5.svg" alt="HTML5"/>
-    <img loading="lazy" class="skill-icon fifth" src="assets/template/welcome/icons/sql.svg" alt="SQL"/>
-    <img loading="lazy" class="skill-icon sixth" src="assets/template/welcome/icons/php.svg" alt="PHP"/>
-    <img loading="lazy" class="skill-icon seventh" src="assets/template/welcome/icons/java.svg" alt="JAVA"/>
-    <img loading="lazy" class="skill-icon eighth" src="assets/template/welcome/icons/bitbucket.svg" alt="BitBucket"/>
-    <img loading="lazy" class="skill-icon ninth" src="assets/template/welcome/icons/android.svg" alt="Android"/>
+    <img loading="lazy" class="skill-icon first" src="assets/template/welcome/icons/icon-lock.svg" alt="Security"/>
+    <img loading="lazy" class="skill-icon second" src="assets/template/welcome/icons/icon-shield.svg" alt="Defense"/>
+    <img loading="lazy" class="skill-icon third" src="assets/template/welcome/icons/icon-bug.svg" alt="Vulnerability"/>
+    <img loading="lazy" class="skill-icon fourth" src="assets/template/welcome/icons/icon-kali.svg" alt="Pentesting"/>
+    <img loading="lazy" class="skill-icon fifth" src="assets/template/welcome/icons/python.svg" alt="Python"/>
+    <img loading="lazy" class="skill-icon sixth" src="assets/template/welcome/icons/javascript.svg" alt="JavaScript"/>
 </div>
