--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -21,4 +21,5 @@
     position: relative;
     image-rendering: high-quality;
     image-rendering: -webkit-optimize-contrast;
+    left: -150px;
 }
