fix(header): open resume in new tab (remove download attribute, add target=_blank)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,8 +20,8 @@
                    href="assets/GEORGE-SANAET-SANKUI-RESUME.pdf"
                    i18n-title="nav@@open.as.pdf"
                    title="Open Resume as PDF"
-                   download="Sanaet-Sankui-Resume.pdf"
-                   rel="noopener">
+                   target="_blank"
+                   rel="noopener noreferrer">
                     <fa-icon [icon]="faCloudDownloadAlt" class="bar-icon"></fa-icon>
                 </a>
             </li>
