--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -31,6 +31,13 @@
             font-weight: 600;
         }
 
+        .details {
+            display: block;
+            margin-top: 0.5em;
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
         .error {
             display: none;
             color: #77242c;
